fix font sizes and text spacing

--- a/css/style.css
+++ b/css/style.css
@@ -15,10 +15,6 @@ nav.navbar.shrink .navbar-brand{
 body{
     font-size: 16px;
 }
-
-@media screen and (max-width: 992px) {
-    body{font-size: 15px;}
-}
 section {
     box-shadow: inset 0 0 15px rgba(0, 0, 0, 0.2);
 }
@@ -115,10 +111,10 @@ footer p{
 }
 #top h1{
     padding-top: 0.8em;
-    font-size: 5.3em;
+    font-size: 4.8em;
 }
 #top p{
-    font-size: 2em;
+    font-size: 1.9em;
     font-weight: 300;
 }
 #aboutme {
@@ -126,6 +122,7 @@ footer p{
 }
 #aboutme p{
     font-size: 1.4em;
+    margin-bottom: 0px;
 }
 #projects{
     background: url(../img/top_right.svg) repeat left bottom, #0077c2;
@@ -142,8 +139,12 @@ footer p{
 }
 #contact p{
     color: #2597f4;
-    font-size: 1.8em;
+    font-size: 1.65em;
 }
 #btns a{
     margin-left: 0.63em;
+}
+@media screen and (max-width: 992px) {
+    body{font-size: 14px;}
+    #aboutme p{margin-bottom: 12px;}
 }
